modified footer and deleted examples

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "My blog, build with Jekyll."
 url: "http://onkarshedge.github.io"
 author:
   name: "Onkar Shedge"
-  email: "shedge31onkar@gmai.com"
+  email: "shedge31onkar@gmail.com"
   url: "http://onkarshedge.github.io"
 
 # Build settings
