--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ defaults:
       layout: "post"
 
 # Custom variables
-version: "1.1.0"
+version: "Created using emerald template"
 
 # Options
 custom_header: false
